<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        tools:context=".MainActivity">


        <Button
            android:id="@+id/btnAula7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/teal_200"
            android:backgroundTintMode="multiply"
            android:text="RecyclerViewApp"
            android:textColor="@color/white"
            app:barrierMargin="@dimen/material_emphasis_medium"
            app:cornerRadius="9dp"
            app:iconTint="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnAula6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="133dp"
            android:layout_marginBottom="84dp"
            android:background="@color/teal_200"
            android:backgroundTintMode="multiply"
            android:text="@string/events"
            android:textColor="@color/white"
            app:cornerRadius="9dp"
            app:iconTint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAula5"
            app:rippleColor="@color/black"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnAula5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="127dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="127dp"
            android:layout_marginBottom="6dp"
            android:background="@color/teal_200"
            android:backgroundTintMode="multiply"
            android:text="@string/intent_binding"
            android:textColor="@color/white"
            app:barrierMargin="@dimen/material_emphasis_medium"
            app:cornerRadius="9dp"
            app:iconTint="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@+id/btnAula6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTestLayouts"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnTestLayouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="133dp"
            android:layout_marginBottom="15dp"
            android:background="@color/teal_200"
            android:backgroundTintMode="multiply"
            android:text="@string/test_layouts"
            android:textColor="@color/white"
            app:cornerRadius="9dp"
            app:iconTint="@color/purple_500"
            app:layout_constraintBottom_toTopOf="@+id/btnAula5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTPClifecycle"
            app:rippleColor="@color/black"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textViewKhalidy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="132dp"
            android:text="@string/khalidy_safar_programs"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAula1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="159dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="1dp"
            android:background="@color/teal_200"
            android:backgroundTintMode="multiply"
            android:text="@string/cambio"
            android:textColor="@color/white"
            app:barrierMargin="@dimen/material_emphasis_medium"
            app:cornerRadius="9dp"
            app:iconTint="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@+id/btnAula2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewKhalidy"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnAula2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="10dp"
            android:background="@color/teal_200"
            android:backgroundTintMode="multiply"
            android:text="@string/imc"
            android:textColor="@color/white"
            app:cornerRadius="9dp"
            app:iconTint="@color/purple_500"
            app:layout_constraintBottom_toTopOf="@+id/btnAula3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAula1"
            app:rippleColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnAula3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="133dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="134dp"
            android:layout_marginBottom="15dp"
            android:background="@color/teal_200"
            android:backgroundTintMode="multiply"
            android:text="@string/calculadora_button"
            android:textColor="@color/white"
            app:cornerRadius="9dp"
            app:iconTint="@color/purple_500"
            app:layout_constraintBottom_toTopOf="@+id/btnTPClifecycle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAula2"
            app:rippleColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnTPClifecycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="106dp"
            android:background="@color/teal_200"
            android:backgroundTintMode="multiply"
            android:text="@string/calc_test"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAula2"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>